# lab08

./: CMakeLists.txt  CPack.cmake  Dockerfile  README.md  main.cpp
.github/workflows/: CPack.yml  build.yml  docker.yml  test.sh
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/_build/formatter_lib/: Makefile
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
hello_world_application/_build/formatter_ex_lib/: Makefile  cmake_install.cmake
hello_world_application/_build/formatter_ex_lib/formatter_lib/: Makefile
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
solver_application/_build/formatter_ex_lib/: Makefile  cmake_install.cmake
solver_application/_build/formatter_ex_lib/formatter_lib/: Makefile  cmake_install.cmake
solver_application/_build/solver_lib/: Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/: test.cpp  test_Account.cpp  test_Transaction.cpp
